# obsidian-stats

./: .gitignore  .gitmodules  .ignore  .prettierignore  Cargo.toml  Makefile  README.md  arquero.d.ts  bun.lockb  licenses.json  package.json  releases-changelog.csv  releases-daily-data.csv  releases-full-data.csv  releases-full-data.json  releases-weekly-data.csv  theme-data.json  tsconfig.json  updateAll.sh
.github/: dependabot.yml
.github/workflows/: deploy.yml  gather-data.yml
data/: Cargo.toml  Makefile
data-lib/: Cargo.toml  Makefile
data-lib/src/: commit.rs  common.rs  date.rs  input_data.rs  iter_ext.rs  latest_data_update.rs  lib.rs  license.rs  spline.rs  version.rs
data-lib/src/latest_data_update/: mod.rs  summary.rs
data-lib/src/plugin/: analysis.rs  bundlers.rs  data_array.rs  full.rs  milestones.rs  mod.rs  packages.rs  testing.rs  warnings.rs
data-lib/src/plugin/data_array/: downloads.rs  licenses.rs  mod.rs  repo_metrics.rs
data-lib/src/release/: data_array.rs  mod.rs
data-lib/src/theme/: data_array.rs  mod.rs
data-wasm/: Cargo.toml  Makefile
data-wasm/src/: lib.rs
data/docs/: mainjs-extra-analysis-plan.md  mainjs-static-detection-checklist.md
data/src/: alerts.rs  commit.rs  common.rs  constants.rs  date.rs  file_utils.rs  git_utils.rs  github.rs  input_data.rs  latest_data_update.rs  main.rs  pipeline.rs  progress.rs  security.rs  state.rs  version.rs
data/src/plugins/: clone_repos.rs  data.rs  download_backfill.rs  extra.rs  mod.rs  release_acquisition.rs  repo.rs  stats_helper.rs
data/src/plugins/analysis/: mod.rs  output.rs  pipeline.rs  repo_analysis.rs  run_stats.rs  types.rs
data/src/plugins/analysis/mainjs/: check_base64.rs  check_bundle.rs  check_es.rs  check_minified.rs  check_sourcemap.rs  check_strings.rs  check_wasm.rs  check_worker.rs  mod.rs
data/src/plugins/analysis/mainjs/api_classifier/: catalog.rs  context.rs  custom_matchers.rs  mod.rs  result.rs  rule.rs  symbol_index.rs  tests.rs
data/src/plugins/analysis/mainjs/api_classifier/custom_matchers/: ast.rs  mod.rs  visitor.rs
data/src/plugins/analysis/mainjs/api_classifier/rule/: error.rs  matcher.rs  mod.rs  taxonomy.rs
data/src/plugins/analysis/mainjs/api_classifier/symbol_index/: ast.rs  mod.rs  visitor.rs
data/src/plugins/analysis/mainjs/api_classifier/symbol_index/alias/: collector.rs  collector_helpers.rs  mod.rs
data/src/plugins/analysis/mainjs/api_classifier/tests/: alias_flow.rs  capabilities.rs  classes.rs  correlations.rs  mod.rs  network.rs  semantic_matchers.rs  symbol_resolution.rs
data/src/plugins/analysis/repo/: check_files.rs  check_i18n.rs  check_license.rs  check_manifest.rs  check_package.rs  mod.rs
data/src/plugins/clone_repos/: git_clone.rs  mod.rs
data/src/plugins/extra/: es_inference.rs  release_enrichment.rs  repo_analysis.rs
data/src/plugins/license/: license_compare.rs  mod.rs
data/src/plugins/release_acquisition/: cache.rs  fetch.rs  mod.rs
data/src/plugins/repo/: bundlers.rs  data.rs  mod.rs  packages.rs  testing.rs
data/src/release/: data.rs  mod.rs
data/src/release/data/: github_fetch.rs  github_transform.rs  interpolate.rs  mod.rs  obsidian_feed.rs
data/src/theme/: data.rs  mod.rs
docs/: 404.html  index.html  manifest_q_W83pSX.mjs  sitemap-0.xml  sitemap-index.xml  types.d.ts
docs/_astro/: hoisted.HawONxlw.js  index.F-b-S9Ly.css  pluginDownloadChart.487YhDEr.js  ui-core.xobOjIu4.js  (+3 more)
src/: constants.ts  date.ts  fetch-data.ts  fetchData.ts  index.ts  plugin.ts  plugin_template.txt  shellUtils.ts  template.mdx  template.txt  theme.ts  theme_template.txt  types.ts  utils.ts  version.ts
tests/: date.test.ts
website/: .prettierignore  .prettierrc.mjs  README.md  astro.config.mjs  bun.lockb  package-lock.json  package.json  svelte.config.js  tsconfig.json
(+8168 files in other folders)
