[package]
name = "data-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
chumsky = {version = "0.12.0", features = ["unstable"]}
hashbrown = {version = "0.16.0", features = ["serde"]}
js-sys = "0.3.77"
rayon = "1.10.0"
regex = "1.11.1"
serde = {version = "1.0.219", features = ["derive"]}
serde-deserialize-duplicates = "0.1.2"
serde_json = {version = "1.0.140", features = ["raw_value"]}
tsify = {version = "0.5.5", features = ["js"]}
wasm-bindgen = "0.2.101"
