[package]
name = "data-wasm"
version = "0.1.0"
authors = ["Moritz Jung <m.projects.code@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.101"
data-lib = { version = "*", path = "../data-lib" }
serde = {version = "1.0.219", features = ["derive"]}
serde-deserialize-duplicates = "0.1.2"
serde_json = {version = "1.0.140", features = ["raw_value"]}
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = false            # Disable wasm-opt, because it's very slow.